# aioscgi

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg
src/aioscgi/: __init__.py  asyncio.py  container.py  core.py  http.py  lifespan.py  main.py  tcp.py  types.py
tests/: __init__.py
tests/aioscgi/: test_core.py  test_http.py  test_lifespan.py
