[build-system]
requires = [
	"setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "aioscgi"
version = "2.3.1"
dependencies = [
	"sioscgi >= 5.0, < 6.0",
]
requires-python = ">= 3.11"
scripts.aioscgi = "aioscgi.main:main"
authors = [
	{ name = "Christopher Head" },
]
description = "An ASGI server that speaks SCGI."
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls.Repository = "https://gitlab.com/Hawk777/aioscgi"
entry-points."aioscgi.io".asyncio = "aioscgi.asyncio"

[tool.pylint.messages_control]
enable = [
	"deprecated-pragma",
	"useless-suppression",
	"use-symbolic-message-instead",
]
disable = [
	"line-too-long",
	"no-else-raise",
	"no-else-return",
	"too-few-public-methods",
	"too-many-arguments",
	"too-many-branches",
	"too-many-instance-attributes",
	"too-many-locals",
	"too-many-nested-blocks",
	"too-many-positional-arguments",
	"too-many-return-statements",
	"too-many-statements",
]

[tool.ruff]
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
allowed-confusables = ["’"]
ignore = [
	"ANN401", # any-type
	"C901", # complex-structure
	"COM812", # missing-trailing-comma
	"D203", # one-blank-line-before-class
	"D212", # multi-line-summary-first-line
	"FBT001", # boolean-type-hint-positional-argument
	"PLR09", # too-many-<foo>
	"PLR2004", # magic-value-comparison
	"PT", # pytest-related stuff
	"S101", # assert
	"S110", # try-except-pass
	"TC001", # typing-only-first-party-import
	"TC003", # typing-only-standard-library-import
]
select = ["ALL"]
