[metadata]
name = aioscgi
version = 2.0.3
url = https://gitlab.com/Hawk777/aioscgi
author = Christopher Head
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
	Topic :: Software Development :: Libraries :: Python Modules
description = An ASGI server that speaks SCGI.
long_description = file:README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = True
install_requires = sioscgi >= 3.0, < 5.0
python_requires = >= 3.9
packages = aioscgi
package_dir =
	=src

[options.entry_points]
console_scripts =
	aioscgi = aioscgi.main:main
aioscgi.io =
	asyncio = aioscgi.asyncio

[options.package_data]
* = py.typed

[pycodestyle]
ignore = E501
